Fixed dark mode

--- a/src/Components/Landing/Header/index.scss
+++ b/src/Components/Landing/Header/index.scss
@@ -21,3 +21,34 @@
     width: 100%;
     background: #dc2626;
 }
+
+#theme-toggle {
+    visibility: hidden;
+}
+
+#theme-toggle + label {
+    content: "";
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: all 0.3s ease-in-out;
+}
+
+#theme-toggle:checked + label {
+    background: linear-gradient(120deg, gold, orange);
+}
+
+#theme-toggle:not(:checked) + label {
+    background: transparent;
+    box-shadow: inset -18px -16px 1px -5px rgb(0, 0, 0);
+}
+
+@media (max-width: 425px) {
+    #theme-toggle:not(:checked) + label {
+        background: transparent;
+        box-shadow: inset -18px -16px 1px -10px rgb(0, 0, 0);
+    }
+    #theme-toggle:checked + label {
+        background: linear-gradient(120deg, gold, orange);
+    }
+}
